landing page updated, css parallax fixed; navbar added, nav collapse added, mobile nav slideout added; about sub-page added

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,10 @@
   background-image: url('../img/weirdblue.png');
 }
 
+.escher{
+  background-image: url('../img/escher.png')
+}
+
 .escalate{
   background-color: #000;
   background-image: url("../img/escalator.jpg");
@@ -21,10 +25,6 @@
 animation: color_change 1s infinite alternate;
 }
 
-.baseTitle{
-  text-align: center;
-  margin-top: 100px;
-}
 
 button.register{
 width: 100%;
@@ -170,6 +170,27 @@ margin-bottom: 10px
   margin: auto;
 }
 
+nav{
+  background-color: rgba(0, 0, 0, .5);
+}
+
+nav a{
+  font-weight: bold;
+}
+
+nav a:hover{
+  color: #9ad3de;
+  text-decoration: none;
+}
+nav a:active{
+  color: #89bdd3;
+  text-decoration: none;
+}
+
+.nav-wrapper{
+  background-color: rgba(0, 0, 0, .5);
+}
+
 @media only screen and (max-width: 992px) {
   .side-nav.fixed {
     -webkit-transform: translateX(105%)!important;
@@ -191,9 +212,6 @@ margin-bottom: 10px
   }
 }
 
-.dashboard{
-
-}
 
 @media only screen and (min-width: 993px){
     .dashboard{
@@ -208,60 +226,4 @@ margin-bottom: 10px
   .chatPanel{
     display: none;
   }
-}
-
-/* Parallax base styles
---------------------------------------------- */
-
-.parallax {
-  height: 500px; /* fallback for older browsers */
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-perspective: 300px;
-  perspective: 300px;
-  -webkit-perspective-origin-x: 100%;
-  perspective-origin-x: 100%;
-}
-
-.parallax__group {
-  position: relative;
-  height: 500px; /* fallback for older browsers */
-  height: 100vh;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-}
-
-.parallax__layer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  -webkit-transform-origin-x: 100%;
-  transform-origin-x: 100%;
-}
-
-.parallax__layer--fore {
-  -webkit-transform: translateZ(90px) scale(.7);
-  transform: translateZ(90px) scale(.7);
-  z-index: 1;
-}
-
-.parallax__layer--base {
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  z-index: 4;
-}
-
-.parallax__layer--back {
-  -webkit-transform: translateZ(-300px) scale(2);
-  transform: translateZ(-300px) scale(2);
-  z-index: 3;
-}
-
-.parallax__layer--deep {
-  -webkit-transform: translateZ(-600px) scale(3);
-  transform: translateZ(-600px) scale(3);
-  z-index: 2;
 }
